# AI-Surveillance

./: .gitignore  README.md  fhird.cpp  first2.cpp  second.cpp
CV_tasks/Cpp/: CMakeLists.txt  display_image.cpp  display_video.cpp  image_manipulation.cpp  main.cpp
CV_tasks/Cpp/cascades-detection/: CMakeLists.txt  cascades_detection.cpp
CV_tasks/Cpp/video-img-processing/: CMakeLists.txt  color_spaces_image_filtering.cpp  image_annotation.cpp  image_manipulation.cpp  real_time_video_processing.cpp
CV_tasks/Mean-Shift/: CMakeLists.txt  main.cpp
CV_tasks/Real-Time Face Tracking using Kalman Filter/: CMakeLists.txt  main.cpp
CV_tasks/py/: color_spaces_image_filtering.py  display_image.py  display_video.py  image_annotation.py  image_manipulation.py  main.py  real_time_video_processing.py
Calculator/build-calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Calculator/calc/: mainwindow.cpp  mainwindow.h
Python_tasks/day1/: arithmetic-operations.py  fibonacci.py  palindrome.py
Python_tasks/day2/: dictionary.py  listofimage.py  listsordictionaries.py
Python_tasks/day3/: tasks.py
Python_tasks/day4/: image_ops.py  main.py
Python_tasks/day5/: task.py
Python_tasks/day6/: task.py
Python_tasks/day7/: task.py
QT_tasks/MultimediaLib/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_tasks/build-MultimediaLib-Qt_6_6_2_for_macOS-Debug/: CMakeCache.txt  build.ninja  (+2 more)
level-task/: fhird.cpp
task-1/: a.out  sortAlgSel.cpp
task-2/: a.out  main.cpp  result.txt  sortAlgSel-header.hpp
(+116 files in other folders)
