cmake_minimum_required(VERSION 3.29.2)
project( Open_CV_Project )
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
# add_executable( Open_CV_Project display_image.cpp )
# add_executable( Open_CV_Project display_video.cpp )
add_executable( Open_CV_Project image_manipulation.cpp )
target_link_libraries( Open_CV_Project  ${OpenCV_LIBS})